# flippre

./: .gitignore  .hgignore  README.md  cabal.project  flippre.cabal  hie.yaml  stack-14.27.yaml  stack.yaml
bench/: Arith.hs  BoolList.hs  C.hs  F.hs  G.hs  Let.hs
examples/: Arith.hs  BoolList.hs  G.hs  Let.hs  SimpleLang.hs
flippre/: flippre.cabal
flippre-backend-grammar/: LICENSE  flippre-backend-grammar.cabal
flippre-backend-grammar/src/Text/FliPpr/: Grammar.hs
flippre-backend-grammar/src/Text/FliPpr/Grammar/: Err.hs  ExChar.hs  Flatten.hs  Simplify.hs  Types.hs  UnFlatten.hs
flippre-backend-grammar/src/Text/FliPpr/Grammar/Driver/: Earley.hs
flippre-backend-grammar/src/Text/FliPpr/Grammar/Internal/: Map2.hs  Util.hs
flippre-examples/: Arith.hs  BoolList.hs  C.hs  CSimple.hs  G.hs  LICENSE  Let.hs  Let2.hs  LetImplicit.hs  LetImplicit2.hs  SimpleFL.hs  SimpleFLImplicit.hs  SimpleLang.hs  Space.hs  flippre-examples.cabal
flippre-examples/c/: C.hs  Exp.hs  Helper.hs  Literals.hs  TypeSpecifier.hs  Types.hs
flippre/src/Data/: Container2.hs  Map2.hs
flippre/src/Text/: FliPpr.hs
flippre/src/Text/FliPpr/: Automaton.hs  Doc.hs  Err.hs  Grammar.hs  Implicit.hs  Mfix.hs  Pat.hs  Primitive.hs  Primitives.hs  QDo.hs  TH.hs
flippre/src/Text/FliPpr/Driver/: Earley.hs
flippre/src/Text/FliPpr/Internal/: Core.hs  Defs.hs  Env.hs  ParserGeneration.hs  PartialEnv.hs  PrettyPrinting.hs  ReifySharing.hs  THCompat.hs  Type.hs
mutual-def-class/: mutual-def-class.cabal
mutual-def-class/src/: Defs.hs
mutual-def-class/src/Internal/: THUtil.hs
src/Data/: Map2.hs
src/Text/: FliPpr.hs
src/Text/FliPpr/: Automaton.hs  Container2.hs  Doc.hs  Err.hs  Fix.hs  Grammar.hs  Pat.hs  TH.hs  Type.hs
src/Text/FliPpr/Driver/: Earley.hs
src/Text/FliPpr/Internal/: CPS.hs  Defs.hs  Env.hs  Grammar.hs  GrammarST.hs  HList.hs  ParserGeneration.hs  Parsing.hs  PartialEnv.hs  PrettyPrinting.hs  Ref.hs  Type.hs
src/Text/FliPpr/Internal/Grammar/: Type.hs
src/Text/FliPpr/Internal/GrammarST/: Core.hs
