name:                flippre
version:             0.1.0
synopsis:            FliPpr, embedded 
-- description:
homepage:            https://github.com/githubuser/flippre#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Text 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Text.FliPpr, 
                       Text.FliPpr.Doc, 
                       Text.FliPpr.TH, 
                       Text.FliPpr.Driver.Earley, 
                       Text.FliPpr.Err, 
                       Text.FliPpr.Internal.Type, 
                       Text.FliPpr.Internal.PrettyPrinting,
                       Text.FliPpr.Internal.ParserGeneration,
                       Text.FliPpr.Internal.Ref, 
                       Text.FliPpr.Internal.GrammarST, 
                       Text.FliPpr.Internal.GrammarST.Core, 
                       Text.FliPpr.Internal.PartialEnv,
                       Data.Map2, 
                       Data.Container2

                                 
  build-depends:       base >= 4.7 && < 5, 
                       mtl  >= 2.0 && < 3, 
                       containers >= 0.5 && < 0.6,
                       template-haskell >= 2.11 && < 2.13, 
                       Earley >= 0.11 && < 0.13, 
                       range-set-list >= 0.1 && < 0.2, 
                       th-abstraction >= 0.2 && < 0.3
                       
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-unticked-promoted-constructors


benchmark grammar-trans 
  type: exitcode-stdio-1.0 
  main-is: bench/G.hs
  build-depends: base, flippre                         
  default-language:    Haskell2010
  ghc-options: -rtsopts 

benchmark bool-list
  type: exitcode-stdio-1.0 
  main-is: bench/BoolList.hs
  build-depends: base, flippre                         
  default-language:    Haskell2010
  ghc-options: -rtsopts

benchmark arith
  type: exitcode-stdio-1.0 
  main-is: bench/Arith.hs
  build-depends: base, flippre
  default-language:    Haskell2010
  ghc-options: -rtsopts 

source-repository head
  type:     mercurial
  location: https://bitbucket.org/kztk/flippre
