name:                flippre
version:             0.2.0
synopsis:            FliPpr, embedded 
-- description:
homepage:            https://bitbucket.org/kztk/flippre/src/default/
license:             BSD3
license-file:        LICENSE
author:              Kazutaka Matsuda
maintainer:          kztk@ecei.tohoku.ac.jp
copyright:           2017, 2018, 2020 Kazutaka Matsuda
category:            Text 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Text.FliPpr, 
                       Text.FliPpr.Doc, 
                       Text.FliPpr.TH, 
                       Text.FliPpr.Driver.Earley, 
                       Text.FliPpr.Err, 
                       Text.FliPpr.Grammar, 
                       Text.FliPpr.Internal.Type, 
                       Text.FliPpr.Internal.Defs, 
                       Text.FliPpr.Internal.PrettyPrinting,
                       Text.FliPpr.Internal.ParserGeneration,
                       Text.FliPpr.Internal.Env, 
                       Text.FliPpr.Internal.PartialEnv

                                 
  build-depends:       base >= 4.7 && < 5, 
                       mtl  >= 2.0 && < 3, 
                       containers >= 0.5 && < 0.7,
                       template-haskell >= 2.11 && < 2.16, 
                       Earley >= 0.11 && < 0.14, 
                       range-set-list >= 0.1 && < 0.2, 
                       th-abstraction >= 0.2 && < 0.4
                       
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-unticked-promoted-constructors -fwarn-incomplete-patterns 


benchmark grammar-trans 
  type: exitcode-stdio-1.0 
  main-is: bench/G.hs
  build-depends: base, flippre                         
  default-language:    Haskell2010
  ghc-options: -rtsopts 

benchmark bool-list
  type: exitcode-stdio-1.0 
  main-is: bench/BoolList.hs
  build-depends: base, flippre
  default-language:    Haskell2010
  ghc-options: -rtsopts

benchmark arith
  type: exitcode-stdio-1.0 
  main-is: bench/Arith.hs
  build-depends: base, flippre, deepseq 
  default-language:    Haskell2010
  ghc-options: -rtsopts 

benchmark arithlet
  type: exitcode-stdio-1.0 
  main-is: bench/Let.hs
  build-depends: base, flippre, deepseq 
  default-language:    Haskell2010
  ghc-options: -rtsopts 


source-repository head
  type:     mercurial
  location: https://bitbucket.org/kztk/flippre
