cabal-version:       2.2
name:                flippre
version:             0.2.0
synopsis:            FliPpr, embedded 
-- description:
homepage:            https://github.com/kztk-m/flippre
license:             BSD-3-Clause 
license-file:        LICENSE
author:              Kazutaka Matsuda
maintainer:          kztk@ecei.tohoku.ac.jp
copyright:           2017, 2018, 2020 Kazutaka Matsuda
category:            Text 
build-type:          Simple
extra-source-files:  README.md


library
  hs-source-dirs:      src
  exposed-modules:     Text.FliPpr, 
                       Text.FliPpr.Doc, 
                       Text.FliPpr.TH, 
                       Text.FliPpr.Driver.Earley, 
                       Text.FliPpr.Err, 
                       Text.FliPpr.Grammar, 
                       Text.FliPpr.Internal.Type, 
                       Text.FliPpr.Internal.Defs, 
                       Text.FliPpr.Internal.PrettyPrinting,
                       Text.FliPpr.Internal.ParserGeneration,
                       Text.FliPpr.Internal.Env, 
                       Text.FliPpr.Internal.PartialEnv

                                 
  build-depends:       base >= 4.7 && < 5, 
                       mtl  >= 2.0 && < 3, 
                       containers >= 0.5 && < 0.7,
                       template-haskell >= 2.11 && < 2.16, 
                       Earley >= 0.11 && < 0.14, 
                       range-set-list >= 0.1 && < 0.2, 
                       th-abstraction >= 0.2 && < 0.4, 
                       fin >= 0.1 && < 0.2 
                       
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat 

flag build-examples
  description: wheather or not build examples
  default: False
  manual:  True  

common common-examples
  hs-source-dirs: examples 
  if flag(build-examples) 
    buildable: True
  else
    buildable: False
  default-language: Haskell2010
  build-depends: base, flippre
  ghc-options: -rtsopts -Wall -Wcompat 

executable grammar-trans 
  import: common-examples 
  main-is: G.hs

executable bool-list
  import: common-examples
  main-is: BoolList.hs  

executable arith
  import: common-examples 
  build-depends: deepseq 
  main-is: Arith.hs

executable arithlet
  import: common-examples
  build-depends: deepseq 
  main-is: Let.hs

source-repository head
  type:     git 
  location: https://github.com/kztk-m/flippre
