cabal-version: 2.2
name: flippre-backend-grammar
version: 0.3.0
synopsis: FliPpr, embedded: Backend for CFGs
-- description:
homepage: https://github.com/kztk-m/flippre
license: BSD-3-Clause
license-file: LICENSE
author: Kazutaka Matsuda
maintainer: kztk@tohoku.ac.jp
copyright: 2017, 2018, 2020, 2024 Kazutaka Matsuda
category: Text
build-type: Simple

common warnings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options:
      -Wmissing-export-lists
      -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options:
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
    Text.FliPpr.Grammar
    Text.FliPpr.Grammar.Driver.Earley
    Text.FliPpr.Grammar.Err
    Text.FliPpr.Grammar.ExChar
    Text.FliPpr.Grammar.Flatten
    Text.FliPpr.Grammar.Simplify
    Text.FliPpr.Grammar.Types
    Text.FliPpr.Grammar.UnFlatten

  other-modules:
    Text.FliPpr.Grammar.Internal.Map2
    Text.FliPpr.Grammar.Internal.Util

  build-depends:
    Earley >=0.11 && <0.14,
    base >=4.7 && <5,
    base-compat >=0.13,
    embedding-by-unembedding ^>=0.8,
    mtl >=2.0 && <3,
    mutual-def-class ^>=0.3,
    prettyprinter >=1.7 && <1.8,
    range-set-list >=0.1 && <0.2,
    split ^>=0.2,

  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/kztk-m/flippre
