cabal-version: 3.0
name: flippre-examples
version: 0.3.0
synopsis: Examples of flippre
-- description:
-- The license under which the package is released.
license: BSD-3-Clause
-- The file containing the license text.
license-file: LICENSE
-- The package author(s).
author: Kazutaka Matsuda
-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: kztk@tohoku.ac.jp
-- A copyright notice.
-- copyright:
category: Text
build-type: Simple

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options:
      -Wmissing-export-lists
      -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options:
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

common deps
  hs-source-dirs: .
  build-depends:
    base,
    flippre ^>=0.3,
    flippre-backend-grammar,

  default-language: Haskell2010

executable space
  import: warnings, deps
  main-is: Space.hs
  build-depends: prettyprinter

executable arith
  import: warnings, deps
  main-is: Arith.hs
  build-depends:
    deepseq,
    prettyprinter,

executable boollist
  import: warnings, deps
  main-is: BoolList.hs

executable grammar
  import: warnings, deps
  main-is: G.hs

executable arithlet
  import: warnings, deps
  main-is: Let.hs
  build-depends:
    deepseq,
    prettyprinter,

executable arithlet2
  import: warnings, deps
  main-is: Let2.hs
  build-depends:
    deepseq,
    prettyprinter,

executable arithlet-implicit
  import: warnings, deps
  main-is: LetImplicit.hs
  build-depends:
    deepseq,
    prettyprinter,

executable arithlet-implicit2
  import: warnings, deps
  main-is: LetImplicit2.hs
  build-depends:
    deepseq,
    prettyprinter,

executable simple-lang
  import: warnings, deps
  main-is: SimpleLang.hs
  build-depends: prettyprinter

executable simple-fl
  import: warnings, deps
  main-is: SimpleFL.hs
  build-depends: prettyprinter

executable simple-fl-implicit
  import: warnings, deps
  main-is: SimpleFLImplicit.hs
  build-depends: prettyprinter

executable c
  import: warnings, deps
  hs-source-dirs: c
  main-is: C.hs
  build-depends: prettyprinter
  other-modules:
    Exp
    Helper
    Literals
    TypeSpecifier
    Types