cabal-version: 2.2
name: flippre
version: 0.3.0
synopsis: FliPpr, embedded
-- description:
homepage: https://github.com/kztk-m/flippre
license: BSD-3-Clause
license-file: LICENSE
author: Kazutaka Matsuda
maintainer: kztk@tohoku.ac.jp
copyright: 2017, 2018, 2020, 2024, 2025 Kazutaka Matsuda
category: Text
build-type: Simple
extra-source-files: README.md

common warnings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options:
      -Wmissing-export-lists
      -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options:
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  if impl(ghc >=9.0) && impl(ghc <9.3)
    ghc-options: -Wno-unticked-promoted-constructors

  if impl(ghc >=9.0)
    ghc-options: -Winvalid-haddock

  if impl(ghc >=9.2)
    ghc-options:
      -Wredundant-bang-patterns
      -Woperator-whitespace

  if impl(ghc >=9.4)
    ghc-options:
      -Wredundant-strictness-flags
      -Wgadt-mono-local-binds

  if impl(ghc >=9.10.1)
    ghc-options:
      -Wbadly-staged-types

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
    -- Text.FliPpr.Internal.Env,
    -- Text.FliPpr.Internal.PartialEnv
    -- Text.FliPpr.Internal.Type
    Text.FliPpr
    Text.FliPpr.Automaton
    Text.FliPpr.Doc
    Text.FliPpr.Implicit
    Text.FliPpr.Internal.Core
    Text.FliPpr.Internal.HList
    Text.FliPpr.Internal.ParserGeneration
    Text.FliPpr.Internal.PrettyPrinting
    Text.FliPpr.Internal.ReifySharing
    Text.FliPpr.Mfix
    Text.FliPpr.Pat
    Text.FliPpr.Primitives
    Text.FliPpr.QDo
    Text.FliPpr.TH

  other-modules:
    Text.FliPpr.Internal.THCompat

  build-depends:
    base >=4.7 && <5,
    base-compat >=0.13,
    containers >=0.5 && <0.7,
    embedding-by-unembedding ^>=0.8,
    fgl ^>=5.7 || ^>=5.8,
    fin >=0.1 && <0.4,
    flippre-backend-grammar ^>=0.3,
    hashable ^>=1.4 || ^>=1.5,
    mtl >=2.3 && <3,
    mutual-def-class,
    prettyprinter >=1.7 && <1.8,
    range-set-list >=0.1 && <0.2,
    some ^>=1,
    template-haskell >=2.11 && <2.23,
    th-abstraction >=0.2 && <0.8,
    unordered-containers ^>=0.2,

  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/kztk-m/flippre
